--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
+    "check-types": "^11.1.2",
     "framer-motion": "^4.0.3",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-moment": "^1.1.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "license": "MIT"
 }
